syntax = "proto3";

option go_package = "./proto";

package endpoints.v1;

service Weather {
  rpc GetWeather(WeatherRequest) returns (WeatherReply);
}

message WeatherFilter {
  string location = 1;
}

message WeatherRequest {
  optional WeatherFilter weatherFilter = 1;
}

enum WeatherType {
  UNKNOWN = 0;
  THUNDERSTORM = 1;
  DRIZZLE = 2;
  RAIN = 3;
  SNOW = 4;
  MIST = 5;
  SMOKE = 6;
  HAZE = 7;
  DUST = 8;
  FOG = 9;
  SAND = 10;
  ASH = 11;
  SQUALL = 12;
  TORNADO = 13;
  CLEAR = 14;
  CLOUDS = 15;
}

message WeatherCurrent {
  double temperature = 1;
  double windSpeed = 2;
  uint64 timestamp = 3;
  int32 humidity = 4;
  WeatherType weather = 5;
  string icon = 6;
}

message TemperatureRange {
  double max = 1;
  double min = 2;
}

message WeatherDailyPoint {
  uint64 timestamp = 1;
  double temperature = 2;
  int32 humidity = 3;
  TemperatureRange temperatureRange = 4;
  WeatherType weather = 5;
  string icon = 6;
}

message WeatherReply {
  repeated WeatherDailyPoint weatherPoint = 1;
  WeatherCurrent weatherCurrent = 2;
}